practised on exercise 7 to 10

--- a/Week1/homework/js-exercises/index.html
+++ b/Week1/homework/js-exercises/index.html
@@ -1,1 +1,2 @@
-node string.js node roundNumber.js animals.js node stringLength.js
+node string.js node roundNumber.js animals.js node stringLength.js node
+remainder.js node compareArrays.js
